data/issues_nolabel/nolabel_test_5200.txt
Error when building /pi_examples/label_image on RPi 3 (/usr/include/jpeglib.h:792:3: error: ‘size_t’ does not name a type)

What related GitHub issues or StackOverflow threads have you found by searching the web for your problem?
Some comments here mention the same problem: #4680 (comment)
Environment info
Operating System:
Raspberry Pi 3
RASPBIAN JESSIE WITH PIXEL
Image with PIXEL desktop based on Debian Jessie
Version:September 2016
Release date:2016-09-23
Kernel version:4.4
If installed from source, provide
If possible, provide a minimal reproducible example (We usually don't have time to read hundreds of lines of your code)
followed instructions here:
https://github.com/tensorflow/tensorflow/tree/master/tensorflow/contrib/pi_examples/
What other attempted solutions have you tried?
Tried changing compiler defined in Makefile to g++-4.8 but to no avail
Logs or other output that would be helpful

make -f tensorflow/contrib/pi_examples/label_image/Makefile
gcc --std=c++11 -O0 -I/usr/local/include -I. -I/home/pi/code/tensorflow/tensorflow/contrib/pi_examples/label_image/../../makefile/downloads -I/home/pi/code/tensorflow/t
ensorflow/contrib/pi_examples/label_image/../../makefile/downloads/eigen/ -I/home/pi/code/tensorflow/tensorflow/contrib/pi_examples/label_image/../../makefile/gen/proto
/ -I/home/pi/code/tensorflow/tensorflow/contrib/pi_examples/label_image/../../makefile/gen/proto_text/ -c tensorflow/contrib/pi_examples/label_image/label_image.cc -o /
home/pi/code/tensorflow/tensorflow/contrib/pi_examples/label_image/gen/obj/tensorflow/contrib/pi_examples/label_image/label_image.o
In file included from tensorflow/contrib/pi_examples/label_image/label_image.cc:26:0:
/usr/include/jpeglib.h:792:3: error: ‘size_t’ does not name a type
size_t free_in_buffer; /* # of byte spaces remaining in buffer /
^
/usr/include/jpeglib.h:804:3: error: ‘size_t’ does not name a type
size_t bytes_in_buffer; / # of bytes remaining in buffer /
^
In file included from /usr/include/jpeglib.h:29:0,
from tensorflow/contrib/pi_examples/label_image/label_image.cc:26:
/usr/include/jpeglib.h:835:3: error: ‘size_t’ has not been declared
JMETHOD(void *, alloc_small, (j_common_ptr cinfo, int pool_id,
^
/usr/include/jpeglib.h:837:3: error: ‘size_t’ has not been declared
JMETHOD(void FAR *, alloc_large, (j_common_ptr cinfo, int pool_id,
^
In file included from tensorflow/contrib/pi_examples/label_image/label_image.cc:26:0:
/usr/include/jpeglib.h:990:34: error: ‘size_t’ has not been declared
EXTERN(void) jpeg_CreateCompress JPP((j_compress_ptr cinfo,
^
/usr/include/jpeglib.h:992:36: error: ‘size_t’ has not been declared
EXTERN(void) jpeg_CreateDecompress JPP((j_decompress_ptr cinfo,
^
/usr/include/jpeglib.h:1000:30: error: ‘FILE’ has not been declared
EXTERN(void) jpeg_stdio_dest JPP((j_compress_ptr cinfo, FILE * outfile));
^
/usr/include/jpeglib.h:1001:29: error: ‘FILE’ has not been declared
EXTERN(void) jpeg_stdio_src JPP((j_decompress_ptr cinfo, FILE * infile));
^
tensorflow/contrib/pi_examples/label_image/label_image.cc: In function ‘tensorflow::Status LoadJpegFile(std::string, std::vector, int_, int_, int_)’:
tensorflow/contrib/pi_examples/label_image/label_image.cc:108:32: error: cannot convert ‘FILE_ {aka IO_FILE}’ to ‘int_’ for argument ‘2’ to ‘void jpeg_stdio_src(j_dec
ompress_ptr, int_)’
jpeg_stdio_src(&cinfo, infile);
^
tensorflow/contrib/pi_examples/label_image/label_image.cc: In function ‘int main(int, char__)’:
tensorflow/contrib/pi_examples/label_image/label_image.cc:318:3: error: ‘vector’ was not declared in this scope
vector tensorflow::Flag > flag_list = {
^
tensorflow/contrib/pi_examples/label_image/label_image.cc:318:3: note: suggested alternatives:
In file included from /usr/include/c++/4.9/vector:64:0,
from tensorflow/contrib/pi_examples/label_image/label_image.cc:29:
/usr/include/c++/4.9/bits/stl_vector.h:214:11: note:   ‘std::vector’
class vector : protected Vector_base<Tp, Alloc>
^
/usr/include/c++/4.9/bits/stl_vector.h:214:11: note:   ‘std::vector’
tensorflow/contrib/pi_examples/label_image/label_image.cc:333:52: error: ‘flag_list’ was not declared in this scope
string usage = tensorflow::Flags::Usage(argv[0], flag_list);
^
tensorflow/contrib/pi_examples/label_image/label_image.cc:335:8: error: in argument to unary !
if (!parse_result) {
^
tensorflow/contrib/pi_examples/label_image/label_image.cc:341:49: error: cannot convert ‘std::string {aka std::basic_string}’ to ‘const char’ for argument ‘1’ to
‘void tensorflow::port::InitMain(const char, int, char_**)’
tensorflow::port::InitMain(usage, &argc, &argv);
^
tensorflow/contrib/pi_examples/label_image/Makefile:79: recipe for target '/home/pi/code/tensorflow/tensorflow/contrib/pi_examples/label_image/gen/obj/tensorflow/contri
b/pi_examples/label_image/label_image.o' failed
make: *_* [/home/pi/code/tensorflow/tensorflow/contrib/pi_examples/label_image/gen/obj/tensorflow/contrib/pi_examples/label_image/label_image.o] Error 1